Add grid layout with the game board

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -32,13 +32,13 @@
 
         <Button
             android:id="@+id/playButton"
-            style="@style/Button"
+            style="@style/MenuButton"
             android:layout_height="wrap_content"
             android:text="Play" />
 
         <Button
             android:id="@+id/statsButton"
-            style="@style/Button"
+            style="@style/MenuButton"
             android:layout_height="wrap_content"
             android:text="Stats" />
 
