--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,23 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.GameFragment">
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="4"
-        android:rowCount="4">
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="0"
+        android:textSize="96sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/gameBoardLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:text="Button" />
+    <GridLayout
+        android:id="@+id/gameBoardLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:rowCount="4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scoreText">
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
+        <Button style="@style/GameButton" />
+
     </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
