--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,11 +14,20 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Button">
+    <style name="MenuButton">
         <item name="android:layout_width">200dp</item>
         <item name="android:paddingVertical">10dp</item>
         <item name="android:paddingHorizontal">60dp</item>
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="GameButton">
+        <item name="android:textSize">64sp</item>
+        <item name="android:layout_width">90dp</item>
+        <item name="android:layout_height">120dp</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:background">@color/black</item>
     </style>
 
 </resources>
