--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,11 +23,14 @@
 
     <style name="GameButton">
         <item name="android:textSize">64sp</item>
-        <item name="android:layout_width">90dp</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:layout_gravity">fill_horizontal</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">120dp</item>
         <item name="android:padding">0dp</item>
-        <item name="android:layout_margin">2dp</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:layout_marginStart">5dp</item>
+        <item name="android:layout_marginEnd">5dp</item>
     </style>
 
 </resources>
