--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,8 @@
         <item name="android:layout_marginEnd">5dp</item>
     </style>
 
+    <style name="StatsText">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
