--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -18,14 +18,14 @@
 
         <TextView
             android:id="@+id/title"
-            android:textSize="40sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="Statistics"
+            android:textSize="40sp"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/name"
             style="@style/StatsText"
             android:layout_width="wrap_content"
